@@ -149,6 +149,8 @@ EOF
 
     # set OS variable CC_BUILD_ARTIFACTS so that custom build tasks know where to redirect their products
     ENV['CC_BUILD_ARTIFACTS'] = self.artifacts_directory
+    # set OS variable CC_BUILD_LABEL so that custom build tasks can use it
+    ENV['CC_BUILD_LABEL'] = self.label
     # CC_RAKE_TASK communicates to cc:build which task to build (if self.rake_task is not set, cc:build will try to be
     # smart about it)
     ENV['CC_RAKE_TASK'] = self.rake_task
